k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: movie-rater
  labels:
    name: movie-rater
